# paragraf

./: .env.example  .gitattributes  .gitignore  API.md  CLAUDE.md  Dockerfile  INSTALLATION.md  MCP.md  README.md  docker-compose.desktop.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.claude/: gsd-file-manifest.json  settings.json  settings.local.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/scripts/: download_models.py  ingest_gesetze.py  validate_slugs.py
backend/tests/: test_api_models.py  test_config.py  test_cross_reference.py  test_discover_tool.py  test_eurlex_parser.py  test_grouped_search_tool.py  test_integration.py  test_model_manager.py  test_models.py  (+10 more)
desktop/: electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_config.py  test_embedding.py  test_law_registry.py  test_models.py  test_parser.py  test_qdrant_store.py
(+460 files in other folders)
